--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,11 @@ body {
    animation: shine 1.5s ease-in-out infinite;
  }
 
+
+ html {
+  scroll-behavior: smooth;
+}
+
   
 /*   @media (prefers-color-scheme: dark) {
 	::-webkit-scrollbar-track {
